2000-03-23  Richard Earnshaw (rearnsha@arm.com)

	* arm.c (output_return_instruction): Handle more cases where we can
	return from a function with an ldr instruction.
	(arm_output_epilogue): Likewise.

	* arm.c (thumb_expand_prologue): Don't clobber the frame pointer
	if we need to push a large stack frame and there are no callee-saved
	registers.

2000-03-16  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm.h (ASM_OUTPUT_MI_THUNK): Fix compile time
	warning.

2000-03-15  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm.c (arm_output_epilogue): Do not pass %c to asm_fprintf.

2000-03-08  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm.md (indirect_jump): Force constant addresses into
	a register. 

2000-03-01  Bernd Schmidt <bernds@cygnus.co.uk>

	* config/arm/arm.md: Add splitter to turn SF moves into SI moves.

2000-02-29  Philip Blundell  <pb@futuretv.com>

	* config/arm/conix-elf.h: New file.
	* configure.in (arm*-*-conix*): New configuration.
	* configure: Regenerate.

2000-02-28  Dmitri Makarov  <dim@windriver.com>

	* extend.texi: Document ARM's support for long/short calls.

	* invoke.texi: Document ARM's -mlong-calls command line switch.
	
	* config/arm/arm-protos.h (arm_is_longcall_p): Add prototype.
	(arm_encode_call_attribute): Add prototype.
	(arm_set_default_type_attribute): Add prototype.
	(arm_strip_name_encoding): Add prototype.

	* config/arm/arm.c (arm_init_cumulative_args): replace
	initialisation og 'long_calls' field with initialisation of
	'call_cookie' field.
	(enum arm_pragma_enum): New enum.
	(arm_pragma_long_calls): New static variable.
	(arm_process_pragma): Also process "#pragma long_calls_off".
	(arm_valid_type_attribute_p): Accept short_call attribute.
	(arm_comp_type_attributes): Check long/short call attributes.
	(arm_encode_call_attribute):  New function:  Encode long_call
	or short_call attribute in function name.
	(arm_set_default_type_attributes): New function: Assign
	default attributes to newly defined type.